--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,13 @@
 		</dependency>
 		<!-- end::junit[] -->
 	</dependencies>
-
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub Packages</name>
+      <url>https://maven.pkg.github.com/nhans09/java_maven</url>
+    </repository>
+  </distributionManagement>
 	<build>
 		<plugins>
 			<plugin>
