--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,18 +1,37 @@
-name: Publish package to GitHub Packages
-on: push
+name: Maven Deploy
+
+on:
+  push:
+    branches:
+      - master  # Deploy when pushing to the main branch
+
 jobs:
-  publish:
-    runs-on: ubuntu-latest 
-    permissions: 
-      contents: read
-      packages: write 
+  deploy:
+    runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-      - name: Publish package
-        run: mvn --batch-mode deploy
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT_GITHUB }}
+    - name: Checkout Repository
+      uses: actions/checkout@v3
+
+    - name: Set Up JDK
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: '17' # Use the Java version you need
+        cache: 'maven'
+
+    - name: Configure Maven for GitHub Packages
+      run: |
+        mkdir -p ~/.m2
+        echo "<settings>
+              <servers>
+                <server>
+                  <id>github</id>
+                  <username>nhans09</username>
+                  <password>${{ secrets.PAT_GITHUB }}</password>
+                </server>
+              </servers>
+            </settings>" > ~/.m2/settings.xml
+
+    - name: Deploy to GitHub Packages
+      run: mvn deploy -DskipTests
